--- a/src/components/feedbackBlock/feedbackBlock.css
+++ b/src/components/feedbackBlock/feedbackBlock.css
@@ -7,7 +7,8 @@
     /*border: 1px solid rgba(255, 255, 255, 0.1);*/
     border: calc(var(--feedback_block_unit_of_size) / 4) solid rgba(255, 255, 255, 0.1);
     /*border-radius: 20px;*/
-    border-radius: calc(var(--feedback_block_unit_of_size) * 5);
+    /*border-radius: calc(var(--feedback_block_unit_of_size) * 5);*/
+    border-radius: 1.5625vw;
     /*padding: 40px;*/
     padding: calc(var(--feedback_block_unit_of_size) * 10);
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
