--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,7 +6,8 @@ footer {
     overflow: hidden;
     width: 100%;
     padding-top: 1.33333333333vw;
-    padding-bottom: 1.75vw;
+    /*padding-bottom: 1.75vw;*/
+    padding-bottom: 0.75vw;
 }
 
 footer::before {
@@ -25,6 +26,8 @@ footer::before {
 
 .footer-nav-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 1.91667vw;
 }
 
@@ -32,8 +35,10 @@ footer::before {
     display: flex;
     align-items: center;
     height: 1.3vw;
-    margin-left: 3vw;
+    /*margin-left: 3vw;*/
     position: relative;
+    width: 55vw;
+    justify-content: center;
     font-size: 0.85vw;
     color: rgba(255, 255, 255, 0.6);
     font-style: italic;
@@ -41,21 +46,25 @@ footer::before {
     /*font-size: 1vw;*/
     font-weight: 300;
     line-height: 1.21;
+    margin-top: 2vw;
+    transition: color 0.3s;
 }
 
 .footer-privacy_link::before {
     content: "";
     position: absolute;
-    left: -15px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 1px;
-    height: 12px;
+    /*left: -15px;*/
+    /*top: 50%;*/
+    top: -20%;
+    /*transform: translateX(-50%);*/
+    width: 100%;
+    height: 1px;
     background: rgba(255, 255, 255, 0.3);
 }
 
 .footer-privacy_link:hover {
-    color: rgba(255, 255, 255, 0.9);
+    /*color: rgba(255, 255, 255, 0.9);*/
+    color: #86A2FF;
 }
 
 @media only screen and (max-width: 767px) {
