--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -67,9 +67,45 @@ footer::before {
     color: #86A2FF;
 }
 
+
+@media only screen and (max-width: 1366px) {
+
+    .footer-nav-container {
+        margin-top: 0;
+    }
+
+    .footer-privacy_link {
+        width: 30vw;
+        font-size: 1.2vw;
+    }
+}
+
 @media only screen and (max-width: 767px) {
     footer {
         padding-top: 1.91666666667vw;
-        padding-bottom: 4.16666666667vw;
+        /*padding-bottom: 4.16666666667vw;*/
+        padding-bottom: 4vw;
+    }
+
+    .footer-nav-container {
+        /*margin-top: 0;*/
+        margin-top: 4.16666666667vw;
+    }
+
+    .footer-privacy_link {
+        width: 60vw;
+        font-size: 4vw;
+        height: 5vw;
+    }
+
+    .footer-privacy_link::before {
+        display: none;
+    }
+}
+
+
+@media (max-width: 480px) {
+    .footer-privacy_link {
+        width: 100vw;
     }
 }
