--- a/src/components/mobileMenu/menu.module.css
+++ b/src/components/mobileMenu/menu.module.css
@@ -230,7 +230,8 @@
     }
 
     .menuBtn {
-        display: block;
+        display: flex;
+        align-items: center;
         background: none;
         border: none;
     }
