--- a/src/index.css
+++ b/src/index.css
@@ -66,29 +66,29 @@ body {
     width: 100%;
 }
 
-.start {
-    animation-name: bl;
-    animation-duration: 2.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    overflow-y: hidden;
-}
+/*.start {*/
+/*    animation-name: bl;*/
+/*    animation-duration: 2.5s;*/
+/*    animation-iteration-count: 1;*/
+/*    animation-fill-mode: forwards;*/
+/*    overflow-y: hidden;*/
+/*}*/
 
-@keyframes bl {
-    0% {
-        background-color: rgba(203, 215, 255, 1);
-        /*background-color: #3E456C;*/
-    }
+/*@keyframes bl {*/
+/*    0% {*/
+/*        background-color: rgba(203, 215, 255, 1);*/
+/*        !*background-color: #3E456C;*!*/
+/*    }*/
 
-    70% {
-        background-color: rgba(203, 215, 255, 1);
-        /*background-color: #3E456C;*/
-    }
+/*    70% {*/
+/*        background-color: rgba(203, 215, 255, 1);*/
+/*        !*background-color: #3E456C;*!*/
+/*    }*/
 
-    to {
-        background-color: #3E456C;
-    }
-}
+/*    to {*/
+/*        background-color: #3E456C;*/
+/*    }*/
+/*}*/
 
 main {
     display: flex;
@@ -471,174 +471,174 @@ p, h1, h2, h3, h4, h5, a, img {
     z-index: 0;
 }
 
-.loading {
-    position: fixed;
-    z-index: 10;
-    background: rgba(203, 215, 255, 1);
-    width: 100%;
-    height: 100vh;
-    animation-name: load;
-    animation-duration: 2.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+/*.loading {*/
+/*    position: fixed;*/
+/*    z-index: 10;*/
+/*    background: rgba(203, 215, 255, 1);*/
+/*    width: 100%;*/
+/*    height: 100vh;*/
+/*    animation-name: load;*/
+/*    animation-duration: 2.5s;*/
+/*    animation-iteration-count: 1;*/
+/*    animation-fill-mode: forwards;*/
+/*    overflow: hidden;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*}*/
 
-@keyframes load {
-    0% {
-        opacity: 1;
-    }
+/*@keyframes load {*/
+/*    0% {*/
+/*        opacity: 1;*/
+/*    }*/
 
-    70% {
-        opacity: 1;
-    }
+/*    70% {*/
+/*        opacity: 1;*/
+/*    }*/
 
-    to {
-        opacity: 0;
-    }
-}
-
-
-.button {
-    /*height: 11 vw;*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    animation: pulse 2s ease-in-out infinite;
-    height: 19vw;
-    width: 19vw;
-}
-
-.svg-loader {
-    margin-top: 8%;
-    width: 75%;
-    height: 73%;
-    z-index: 1;
-    grid-row-start: 1;
-    grid-column-start: 1;
-    align-self: center;
-}
+/*    to {*/
+/*        opacity: 0;*/
+/*    }*/
+/*}*/
 
 
-@keyframes pulse {
-    0% {
-        opacity: 1;
-        transform: scale(1)
-    }
+/*.button {*/
+/*    !*height: 11 vw;*!*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    position: relative;*/
+/*    animation: pulse 2s ease-in-out infinite;*/
+/*    height: 19vw;*/
+/*    width: 19vw;*/
+/*}*/
 
-    50% {
-        opacity: .9;
-        transform: scale(1.1)
-    }
-
-    to {
-        opacity: 1;
-        transform: scale(1)
-    }
-}
-
-@media only screen and (max-width: 1366px) {
-    .button {
-        height: 30vw;
-        width: 30vw;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .button {
-        height: 60vw;
-        width: 60vw;
-    }
-}
+/*.svg-loader {*/
+/*    margin-top: 8%;*/
+/*    width: 75%;*/
+/*    height: 73%;*/
+/*    z-index: 1;*/
+/*    grid-row-start: 1;*/
+/*    grid-column-start: 1;*/
+/*    align-self: center;*/
+/*}*/
 
 
-.power-on {
-    /*height: 335%;*/
-    /*width: 335%;*/
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-    fill: none;
-    stroke: #3E456C;
-    stroke-width: 9px;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    transform: rotate(-90deg);
-}
+/*@keyframes pulse {*/
+/*    0% {*/
+/*        opacity: 1;*/
+/*        transform: scale(1)*/
+/*    }*/
 
-.circle {
-    opacity: 1;
-    stroke-dasharray: 1696;
-    animation-name: dashoffset1;
-    animation-iteration-count: infinite;
-    animation-duration: 2.1s;
-    animation-timing-function: linear;
-    transform-origin: center 50%;
-}
+/*    50% {*/
+/*        opacity: .9;*/
+/*        transform: scale(1.1)*/
+/*    }*/
 
-@keyframes dashoffset1 {
-    0% {
-        stroke-dashoffset: 1696;
-        transform: rotate(0)
-    }
+/*    to {*/
+/*        opacity: 1;*/
+/*        transform: scale(1)*/
+/*    }*/
+/*}*/
 
-    47.6% {
-        stroke-dashoffset: 1;
-        transform: rotate(0)
-    }
+/*@media only screen and (max-width: 1366px) {*/
+/*    .button {*/
+/*        height: 30vw;*/
+/*        width: 30vw;*/
+/*    }*/
+/*}*/
+
+/*@media only screen and (max-width: 767px) {*/
+/*    .button {*/
+/*        height: 60vw;*/
+/*        width: 60vw;*/
+/*    }*/
+/*}*/
 
 
-    95.2% {
-        stroke-dashoffset: 1696;
-        transform: rotate(360deg)
-    }
+/*.power-on {*/
+/*    !*height: 335%;*!*/
+/*    !*width: 335%;*!*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    position: absolute;*/
+/*    z-index: 1;*/
+/*    fill: none;*/
+/*    stroke: #3E456C;*/
+/*    stroke-width: 9px;*/
+/*    stroke-linecap: round;*/
+/*    stroke-linejoin: round;*/
+/*    transform: rotate(-90deg);*/
+/*}*/
 
-    100% {
-        stroke-dashoffset: 1696;
-        transform: rotate(360deg)
-    }
-}
+/*.circle {*/
+/*    opacity: 1;*/
+/*    stroke-dasharray: 1696;*/
+/*    animation-name: dashoffset1;*/
+/*    animation-iteration-count: infinite;*/
+/*    animation-duration: 2.1s;*/
+/*    animation-timing-function: linear;*/
+/*    transform-origin: center 50%;*/
+/*}*/
+
+/*@keyframes dashoffset1 {*/
+/*    0% {*/
+/*        stroke-dashoffset: 1696;*/
+/*        transform: rotate(0)*/
+/*    }*/
+
+/*    47.6% {*/
+/*        stroke-dashoffset: 1;*/
+/*        transform: rotate(0)*/
+/*    }*/
 
 
-.circle2 {
-    opacity: 1;
-    stroke-dasharray: 1351;
-    animation-name: dashoffset2;
-    animation-iteration-count: infinite;
-    animation-duration: 2.1s;
-    animation-timing-function: linear;
-    transform-origin: center 50%;
-}
+/*    95.2% {*/
+/*        stroke-dashoffset: 1696;*/
+/*        transform: rotate(360deg)*/
+/*    }*/
+
+/*    100% {*/
+/*        stroke-dashoffset: 1696;*/
+/*        transform: rotate(360deg)*/
+/*    }*/
+/*}*/
 
 
-@keyframes dashoffset2 {
-    0% {
-        stroke-dashoffset: 1351;
-        transform: rotate(-180deg)
-    }
+/*.circle2 {*/
+/*    opacity: 1;*/
+/*    stroke-dasharray: 1351;*/
+/*    animation-name: dashoffset2;*/
+/*    animation-iteration-count: infinite;*/
+/*    animation-duration: 2.1s;*/
+/*    animation-timing-function: linear;*/
+/*    transform-origin: center 50%;*/
+/*}*/
 
-    43% {
-        stroke-dashoffset: 1;
-        transform: rotate(-180deg)
-    }
 
-    50% {
-        stroke-dashoffset: 1;
-        transform: rotate(-180deg)
-    }
+/*@keyframes dashoffset2 {*/
+/*    0% {*/
+/*        stroke-dashoffset: 1351;*/
+/*        transform: rotate(-180deg)*/
+/*    }*/
 
-    93% {
-        stroke-dashoffset: 1351;
-        transform: rotate(180deg)
-    }
+/*    43% {*/
+/*        stroke-dashoffset: 1;*/
+/*        transform: rotate(-180deg)*/
+/*    }*/
 
-    100% {
-        stroke-dashoffset: 1351;
-        transform: rotate(180deg)
-    }
-}
+/*    50% {*/
+/*        stroke-dashoffset: 1;*/
+/*        transform: rotate(-180deg)*/
+/*    }*/
+
+/*    93% {*/
+/*        stroke-dashoffset: 1351;*/
+/*        transform: rotate(180deg)*/
+/*    }*/
+
+/*    100% {*/
+/*        stroke-dashoffset: 1351;*/
+/*        transform: rotate(180deg)*/
+/*    }*/
+/*}*/
